manifests/base/resources/users/nu.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "8080"
    prometheus.io/scrape: "true"
  labels:
    app: users
    chart: users-2.1.22
    heritage: Helm
    release: qliksense
  name: qliksense-users
  namespace: default
spec:
  ports:
  - name: users
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: users
    release: qliksense
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: users
    chart: users-2.1.22
    heritage: Helm
    release: qliksense
  name: qliksense-users
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
      release: qliksense
  template:
    metadata:
      annotations:
        checksum/configs: 3dccfc8c8a9aaedade502abc2b19a3d6d5e91e029d78c06e9c67c6236c466182
        checksum/secrets: fc80ab37b5c1f5c308276d84233d718093298ecf6d8f368227ea09c541940c1f
      labels:
        app: users
        qliksense-messaging-nats-client: "true"
        release: qliksense
        users-nats-client: "true"
    spec:
      containers:
      - env:
        - name: MONGODB_URI_FILE
          value: /run/secrets/qlik.com/qliksense/mongodbUri
        - name: MONGODB_URI
          valueFrom:
            secretKeyRef:
              key: mongodbUri
              name: qliksense-secrets-bd2fdhmtgk
        - name: KEYS_URI_TEMP
          valueFrom:
            configMapKeyRef:
              key: keysUri
              name: qliksense-configs-4kf2g6fgd9
        - name: KEYS_URI
          value: $(KEYS_URI_TEMP)/v1/keys
        - name: TOKEN_AUTH_URI_TEMP
          valueFrom:
            configMapKeyRef:
              key: tokenAuthUri
              name: qliksense-configs-4kf2g6fgd9
        - name: TOKEN_AUTH_URI
          value: $(TOKEN_AUTH_URI_TEMP)/v1
        - name: NATS_CLIENT_ID
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: TOKEN_AUTH_PRIVATE_KEY_FILE
          value: /run/secrets/qlik.com/users/tokenAuthPrivateKey
        - name: TOKEN_AUTH_PRIVATE_KEY_ID_FILE
          value: /run/secrets/qlik.com/users/tokenAuthPrivateKeyId
        - name: FEATURE_FLAGS_URI
          valueFrom:
            configMapKeyRef:
              key: featureFlagsUri
              name: qliksense-configs-4kf2g6fgd9
        - name: INGRESS_AUTH_URL
          valueFrom:
            configMapKeyRef:
              key: ingressAuthUrl
              name: qliksense-users-configs-mdm2288kgd
        - name: LOG_LEVEL
          valueFrom:
            configMapKeyRef:
              key: logLevel
              name: qliksense-users-configs-mdm2288kgd
        - name: NATS_STREAMING_CLUSTER_ID
          valueFrom:
            configMapKeyRef:
              key: natsStreamingClusterId
              name: qliksense-configs-4kf2g6fgd9
        - name: NATS_URI
          valueFrom:
            configMapKeyRef:
              key: natsUri
              name: qliksense-configs-4kf2g6fgd9
        - name: ENVIRONMENT
          value: qseok
        - name: MONGO_MAX_TIME_MS
          value: "2000"
        - name: MONGO_TIMEOUT_ENABLED
          value: "true"
        - name: NATS_ENABLED
          value: "true"
        - name: REGION
          value: example
        image: qlik-docker-qsefe.bintray.io/users:2.5.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /live
            port: http
        name: main
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /ready
            port: http
        volumeMounts:
        - mountPath: /run/secrets/qlik.com/qliksense
          name: qliksense-secrets
          readOnly: true
        - mountPath: /run/secrets/qlik.com/users
          name: users-secrets
          readOnly: true
      dnsConfig:
        options:
        - name: timeout
          value: "1"
      imagePullSecrets:
      - name: artifactory-docker-secret
      volumes:
      - name: qliksense-secrets
        secret:
          secretName: qliksense-secrets-bd2fdhmtgk
      - name: users-secrets
        secret:
          secretName: qliksense-users-secrets-722k8f57bf
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: qlik-nginx
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-url: http://qliksense-edge-auth.default.svc.cluster.local:8080/v1/auth
    nginx.ingress.kubernetes.io/configuration-snippet: |
      set $host_and_uri $http_host$request_uri;
      if ( $host_and_uri ~* "^.{2049,}$" ) { return 414; }
      rewrite (?i)/api/(.*) /$1 break;
      more_clear_input_headers "X-Forwarded-Host" "X-Forwarded-For" "X-Forwarded-Proto" "X-Original-URI" "X-Original-URL";
    nginx.ingress.kubernetes.io/enable-cors: "true"
  labels:
    app: users
    chart: users-2.1.22
    heritage: Helm
    release: qliksense
  name: qliksense-users
  namespace: default
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: qliksense-users
          servicePort: 8080
        path: /api/v1/users
